# polit

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.beads/: issues.jsonl
benches/: simulation.rs
docs/: poldev.md  polit-mcp.md
docs/gdd/: README.md
docs/gdd/01-core-architecture/: README.md
docs/gdd/02-game-loop/: README.md
docs/gdd/03-deckbuilder/: README.md
docs/gdd/04-ai-harness/: README.md
docs/gdd/05-economic-simulation/: README.md
docs/gdd/06-npc-social-graph/: README.md
docs/gdd/07-law-engine/: README.md
docs/gdd/08-character-meta-progression/: README.md
docs/gdd/09-ui-design/: README.md
docs/gdd/10-freeform-action-engine/: README.md
docs/gdd/11-modding-sdk/: README.md
docs/gdd/12-data-pipeline/: README.md
docs/gdd/13-audio/: README.md
docs/gdd/14-game-design-principles/: README.md
docs/gdd/15-news-information/: README.md
docs/gdd/16-corporate-system/: README.md
docs/gdd/17-geopolitics/: README.md
docs/gdd/18-government-departments/: README.md
docs/gdd/19-elections/: README.md
docs/gdd/20-tutorial-onboarding/: README.md
docs/gdd/21-performance-cicd/: README.md
docs/gdd/22-new-game-flow/: README.md
docs/plans/: 2026-04-13-election-input-contract.md  2026-04-13-simulation-stack-epic-plan.md  2026-04-15-ai-provider-setup-design.md  2026-04-15-ai-provider-setup-plan.md  2026-04-15-poldev-design.md  2026-04-15-poldev-plan.md  2026-04-15-polit-mcp-design.md  2026-04-15-polit-mcp-plan.md
game/config/: balance.toml  difficulty.toml  theme.toml
game/scenarios/: boom_economy.toml  cold_war_tension.toml  modern_2024.toml  recession_2008.toml  stagflation_1970s.toml  test_minimal.toml
game/scenarios/modern_usa/: intro.toml
sim/: __init__.py  host.py  pyproject.toml  requirements.txt  scenario.py
sim/agents/: __init__.py  corporate_agent.py  country_agent.py  market_agent.py  media_agent.py  sector_agent.py  voter_agent.py
sim/bootstrap/: __init__.py  population.py
sim/data_pipeline/: __init__.py  fred.py
sim/layers/: base.py  corporate.py  elections.py  geopolitical.py  household.py  macro_economy.py  markets.py  media.py  political.py  sectors.py
sim/models/: __init__.py  population.py
sim/tests/: test_all_events.py  test_bootstrap.py  test_corporate.py  test_economic_integration.py  test_elections.py  test_event_interactions.py  test_fred.py  test_full_integration.py  test_geopolitical.py  test_historical.py  test_host.py  test_household.py  test_macro.py  test_markets.py  test_media.py  test_political.py  test_population.py  test_scenario.py  test_scenarios.py  test_sectors.py
src/: lib.rs  main.rs
src/ai/: agent.rs  async_chat.rs  codex.rs  config.rs  context.rs  debug_log.rs  factory.rs  memory.rs  mock.rs  mod.rs  native_format.rs  openrouter.rs  provider.rs  quantized_gemma4.rs  secrets.rs  tools.rs  vfs.rs
src/devtools/: diagnostics.rs  frame_dump.rs  harness.rs  in_process.rs  mod.rs  pty.rs  scenario.rs
src/engine/: channels.rs  components.rs  config.rs  demo.rs  events.rs  game_loop.rs  game_thread.rs  mod.rs  paths.rs  world.rs
src/mcp/: inspect.rs  mod.rs  pty_session.rs  session.rs  tools.rs
src/persistence/: mod.rs
src/scripting/: mod.rs
src/state/: gamestate_fs.rs  mod.rs
src/systems/: cards.rs  dice.rs  economy.rs  election_inputs.rs  mod.rs  population.rs  sim_bridge.rs  sim_events.rs  social_graph.rs  world_delta.rs
src/ui/: app.rs  character_creation.rs  chat.rs  intro.rs  mod.rs  music.rs  scenario.rs  setup.rs  theme.rs  title.rs
src/ui/components/: avatar.rs  character_sheet.rs  gen_widget.rs  input_bar.rs  mod.rs  status_bar.rs
tests/: e2e_flow.rs  election_inputs.rs  game_loop.rs  poldev_cli.rs  poldev_frame_dump.rs  poldev_in_process_runner.rs  poldev_in_process_startup.rs  poldev_pty_runner.rs  poldev_scenario.rs  poldev_scenarios.rs  polit_mcp_cli.rs  polit_mcp_gameplay.rs  polit_mcp_inspect.rs  polit_mcp_pty_session.rs  polit_mcp_startup.rs  polit_mcp_tools.rs  polit_mcp_visual.rs
tests/tui/scenarios/: first_launch_ai_setup_codex.yaml  first_launch_ai_setup_openrouter_missing_key.yaml  title_reopen_ai_setup.yaml
(+2 files in other folders)
