[package]
name = "polit"
version = "0.1.0"
edition = "2021"
description = "The American Politics Simulator"
license = "MIT"

[dependencies]
# ECS Engine
bevy_ecs = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Database
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }

# Graph
petgraph = "0.6"

# Scripting
rhai = "1.20"

# Threading
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

# AI Inference (Candle — HuggingFace Rust ML, git for Gemma 4 support)
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main" }
tokenizers = "0.21"
hf-hub = "0.4"
anyhow = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }

[dependencies.tempfile]
version = "3"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
data-pipeline = ["reqwest"]
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]

[[bench]]
name = "simulation"
harness = false

[profile.release]
strip = true
