[package]
name = "polit"
version = "0.1.0"
edition = "2021"
description = "The American Politics Simulator"
license = "MIT"

[dependencies]
# ECS Engine
bevy_ecs = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# TUI Widgets (third-party)
tui-big-text = "0.7"
tui-scrollview = "0.6"
throbber-widgets-tui = "0.8"
tui-tree-widget = "0.22"

# Database
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }

# Graph
petgraph = "0.6"

# Scripting
rhai = "1.20"

# Threading
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
rmp-serde = "1"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Audio
tunes = "1.1"

# Utilities
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

# AI Inference
llama-cpp-2 = "0.1.143"
hf-hub = "0.4"
anyhow = "1"
libc = "0.2"

# Python interop
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }

[dependencies.tempfile]
version = "3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[features]
default = ["metal"]
simulation = ["pyo3"]
data-pipeline = ["reqwest"]
cuda = []
metal = ["llama-cpp-2/metal"]

[[bench]]
name = "simulation"
harness = false

[profile.release]
strip = true
